prometheus/core/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus-ns
  labels:
    app: prometheus
spec:
  ingressClassName: 'nginx'
  rules:
    - host: prometheusui.shixiaochuang.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
